--- a/main.tex
+++ b/main.tex
@@ -392,21 +392,27 @@ Generally speaking, expressing the operation of a k-form on an i-vector and j-ve
 Up until this point in our discussion of k-forms and k-vectors, we've remained in a general coordinate-free form. For a conceptual understanding of the tools in use, this is just fine, and is in fact preferable. It shows that the math up until this point is "universal," and can be applied to any frame of reference without sacrificing scientific validity. Furthermore, it should be noted that nature itself is coordinate-free. The universe doesn't come prepackaged with coordinates, rather they are something that humans have created to streamline scientific investigation. The caveat to this is that while coordinate-free works well for conceptual understanding, it isn't all that useful for solving actual problems in physics, which is the entire point. Therefore, in this section, we will begin imposing coordinates on the systems we're working with. 
 
 
-Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $d\lambda$ be a vector starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $d\lambda$. Mathematically, this relates to defining the coordinate system in terms of \textbf{basis vectors}, and assigning $d\lambda$ directional components as \textbf{differential elements} along each basis vector, the sum of which gives us $d\lambda$. So, $d\lambda = dx^i \frac{\partial \lambda}{\partial x^i} = dx^i e_i$,\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$. Such notation can be used any time there is a matching upper and lower index. This is Einstein Summation Convention, and is heavily used throughout physics. It is therefore necessary to become comfortable with it.} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis. In other words, we can say that $dx^1e_1$ gives us an infinitesimal segment along $x^1$, $dx^2e_2$ along $x^2$, and so on. 
+Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $d\lambda$ be a vector starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $d\lambda$. Mathematically, this relates to defining the coordinate system in terms of the \textbf{basis}, and assigning $d\lambda$ directional components  along each basis vector, the sum of which gives us $d\lambda$. So, $d\lambda = dx^i \frac{\partial \lambda}{\partial x^i} = dx^i e_i$,\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$. Such notation can be used any time there is a matching upper and lower index. This is Einstein Summation Convention, and is heavily used throughout physics. It is therefore necessary to become comfortable with it.} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis. In other words, we can say that $dx^1e_1$ gives us an infinitesimal segment along $x^1$, $dx^2e_2$ along $x^2$, and so on. 
+
+\textbf{NOTE: Better to call $dx^i$ the infinitesimal scalar component in the $e_i$ direction. Write the $d\lambda$ instead as $dP$, that allows us to say that the infinitesimal displacement is a dP, and $dP = dx^i dP/dx^i$. Actually, we don't even need to talk about $d\lambda$ if we don't want. We can talk about defining coordinates on our manifold, giving a point, giving the displacements from that point}
 
 \begin{defn}
-	The \textbf{basis vectors} of a space are a set of linearly independent vectors such that any element of that space may be constructed using the basis vectors. In $\mathbb{R}^3$, the basis vectors are equivalently $(e^1, e^2, e^3), (\hat{x}, \hat{y}, \hat{z}), (\hat{i}, \hat{j}, \hat{k})$, among others. 
+	The \textbf{basis} of a space are a set of linearly independent directions such that any element of that space may be constructed using the basis vectors. In $\mathbb{R}^3$, the basis vectors are equivalently $(e^1, e^2, e^3), (\hat{x}, \hat{y}, \hat{z}), (\hat{i}, \hat{j}, \hat{k})$, among others. 
 \end{defn}
+
+
+\textbf{NOTE: Fix this deifnition without using vectors, use directions. Basis can be seen as ratio between the differentials and the segment}
 
 \begin{defn}
-	\textbf{Differential elements} $dx^i$ are the infinitesimal bits of a line, surface, volume, etc. such that the sum of all of them return the line, surface, volume, etc. itself. 
+	\textbf{Differential elements} $dx^i$ are the infinitesimal components which we will be integrationg along.  
 \end{defn}
 
+\textbf{NOTE: Tread carefully with the language. }
 
 Functionals will be dealt with in a similar way. Let $\omega$ be a covector and $d\lambda$ be an infinitesimal segment. Then $\omega(d\lambda)$ is a linear function of the coordinate differences along $d\lambda$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial \lambda} = \omega_i e^i$ where each $e^i$ is a basis vector. In fact, $e^i(d\lambda) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j = dx^i$.\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}
+\textbf{We can say that $\omega(d\lambda) = \omega_i dx^i$}
 
-
-Putting everything together now, for infinitesimal segment d$\lambda$ and k-form $\omega$, $\omega(d\lambda) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: when properly defined and carefully applied to each other, a vector and covector together naturally simplify down to a summation of functions applied over infinitesimal segments. 
+Putting everything together now, for infinitesimal segment d$\lambda$ and k-form $\omega$, $\omega(d\lambda) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: when properly defined and carefully applied to each other, a vector and covector together naturally simplify down to a linear combination of infinitesimal segments. 
 
 Working in a space with specified coordinates allows us to solve real problems. For instance, in section 2.2 we got slightly ahead of ourselves by describing the oscillation of a mass on a spring with specific coordinates without yet having them defined. Now, with the tools in this section, such a problem is possible to solve.  
 
@@ -415,13 +421,16 @@ Working in a space with specified coordinates allows us to solve real problems. 
 \section{Tensors and coordinate transformations}
 
 
-Nature does not come prepackaged with a specific, preferred coordinate system. It follows then that any coordinate system that we choose to impose on our system is ultimately changeable, and that our system can just as well be described with any number of coordinate systems. For instance, if we say that some object lies at point $P$ with respect to coordinate system $Q$, we can just as well say that it lies at point $P'$ with respect to coordinate system $Q$. In general, an object that has such a relationship with objects in other coordinate systems are called \textbf{tensors}. 
+Nature does not come prepackaged with a specific, preferred coordinate system. It follows then that any coordinate system that we choose to impose on our system is ultimately changeable, and that our system can just as well be described with any number of coordinate systems. For instance, if we say that some object lies at point $P$ with respect to coordinate system $Q$, we can just as well say that it lies at point $P$ with respect to coordinate system $Q'$. In general, an object that has such a relationship with objects in other coordinate systems are called \textbf{tensors}. 
+\textbf{note: The point remains the same, the coordinates change. Otherwise we're doing an active transformation}
  
 
 
 \begin{defn}
 	A \textbf{tensor} is an object with a one-to-one relationship with objects between coordinate systems. 
 \end{defn}
+
+\textbf{Acceleration is not a tensor. This is not a good definition, even though we do want to use the transformation law. Get rid of these corollaries, and just give the general rule. We could also derive the transformation law of the vector, and of the covector. Then generalize those transformations}
 
 \begin{coro}
 	A contravariant tensor of \textbf{rank 1} is a vector (as described in section 2.2), which transforms as  $X'^a = \frac{\partial x'^a}{\partial x^b} X^b$.  
@@ -452,13 +461,21 @@ Nature does not come prepackaged with a specific, preferred coordinate system. I
 	If a tensor $X = 0$ in coordinate system Q, then $X' = 0$ in any other coordinate system $Q'$. This follows immediately from the transformation rules. 
 \end{coro}
 
-Other treatments of differential geometry in physics (such as Wald's "General Relativity") define tensors foremost as multilinear mappings onto $\mathbb{R}$. That is, our defining feature of k-forms and covectors is used as the definition of tensors in general. What this means is that just as we can define $\omega_k \in \Omega_k : V^k \to \mathbb{R}$ as a function on k-vectors, we can define $v^k \in V^k : \Omega_k \to \mathbb{R}$ as a function on k-forms. In other words, k-forms are functions that take k-vectors to $\mathbb{R}$, and k-vectors are functions that take k-forms to $\mathbb{R}$. From a mathematical perspective, this is entirely valid, and does not detract from solving problems in physics. Furthermore, it has the added bonus of emphasizing that k-forms and k-vectors are in a sense two sides of the same coin\footnote{Properly speaking, k-forms and k-vectors are \emph{dual} to each other}, neither occupies a preferred position as the operator or as the object being operated on. From a physical perspective, however, this has somewhat unfortunate implications. Recall that in Section 2.2 we motivated the discussion of covectors using force, and of vectors using infinitesimal displacement. Mathematically, we would be entirely within our rights to say that an infinitesimal displacement is a function on a force that produces work, rather than saying that the force is a function on an infinitesimal displacement that produces work. This is not a physically sensible approach, as it would imply treating momentum as a function, and force as a displacement, so we will be continuing to be emphasizing covectors and k-forms as being functions of vectors and k-vectors, while also using the transformation law as the defining characteristic of tensors. 
+Other treatments of differential geometry in physics (such as Wald's "General Relativity") define tensors foremost as multilinear mappings onto $\mathbb{R}$. That is, our defining feature of k-forms and covectors is used as the definition of tensors in general. What this means is that just as we can define $\omega_k \in \Omega_k : V^k \to \mathbb{R}$ as a function on k-vectors, we can define $v^k \in V^k : \Omega_k \to \mathbb{R}$ as a function on k-forms. In other words, k-forms are functions that take k-vectors to $\mathbb{R}$, and k-vectors are functions that take k-forms to $\mathbb{R}$. From a mathematical perspective, this is entirely valid, and does not detract from solving problems in physics. Furthermore, it has the added bonus of emphasizing that k-forms and k-vectors are in a sense two sides of the same coin\footnote{Properly speaking, k-forms and k-vectors are \emph{dual} to each other}, neither occupies a preferred position as the operator or as the object being operated on. From a physical perspective, however, this has somewhat unfortunate implications. Recall that in Section 2.2 we motivated the discussion of covectors using force, and of vectors using infinitesimal displacement. Mathematically, we would be entirely within our rights to say that an infinitesimal displacement is a function on a force that produces work, rather than saying that the force is a function on an infinitesimal displacement that produces work. This is not a physically sensible approach, as it would imply treating momentum as a function, and force as a displacement, so we will be continuing to be emphasizing covectors and k-forms as being functions of vectors and k-vectors, while also using the transformation law as the defining characteristic of tensors.
+
+\textbf{Put the multilinear mapping definition in here as well} 
 
 
 
 \section{Stokes' Theorem}
 
-Suppose we have a volume $\sigma^3 \in S^3$ (such as a sphere) with some source of flow $\omega_2 \in \Omega_2$ enclosed by the sphere, and 2-functional $f_2 \in F^2$ such that for $\sigma^2 \in S^2$, $f_2(\sigma^2) = \int_{\sigma^2} \omega_2(d\sigma^2)$. $\omega_2$ cannot operate on $\sigma^3$, as $\sigma^3$ is in $S^3$, and $\omega_2$ is in $\Omega_2$. That is, it cannot return the flux through infinitesimal bits of the sphere. What is \emph{can} do, however, is return the flux through infinitesimal bits of the \emph{surface} of the sphere: $\partial \sigma^3 \in S^2$. We can write then $f_2(\partial\sigma^3) = \int_{\partial\sigma^3} \omega_2 (d\partial\sigma^3)$. Recalling Definition 1.14, we know that $f_2(\partial\sigma^3) = \eth f_2(\sigma^3)$. And furthermore, $\eth f_2(\sigma^3) = \int_{\sigma^3} \eth\omega_2(d\sigma^3)$. Therefore, we have $\int_{\partial \sigma^3} \omega_2(d\partial\sigma^3) = \int_{\sigma^3} \eth \omega_2(d\sigma^3)$. 
+Suppose we have a volume $\sigma^3 \in S^3$ (such as a sphere) with some source of flow $\omega_2 \in \Omega_2$ enclosed by the sphere, and 2-functional $f_2 \in F^2$ such that for $\sigma^2 \in S^2$, $f_2(\sigma^2) = \int_{\sigma^2} \omega_2(d\sigma^2)$. $\omega_2$ cannot operate on $\sigma^3$, as $\sigma^3$ is in $S^3$, and $\omega_2$ is in $\Omega_2$. That is, it cannot return the flux through infinitesimal bits of the sphere. What it \emph{can} do, however, is return the flux through infinitesimal bits of the \emph{surface} of the sphere: $\partial \sigma^3 \in S^2$. We can write then $f_2(\partial\sigma^3) = \int_{\partial\sigma^3} \omega_2 (d\partial\sigma^3)$. Recalling Definition 1.14, we know that $f_2(\partial\sigma^3) = \eth f_2(\sigma^3)$. And furthermore, $\eth f_2(\sigma^3) = \int_{\sigma^3} \eth\omega_2(d\sigma^3)$. Therefore, we have $\int_{\partial \sigma^3} \omega_2(d\partial\sigma^3) = \int_{\sigma^3} \eth \omega_2(d\sigma^3)$. 
+
+\textbf{NOTE: Given a functional of nD, we can create a functional of (n+1)D that can operate on the boundary. Given $f_2$, we can always create a functional that applies in 3D by taking the boundary and giving it to $f_2$. Then we say for $df_2$ there is an operator associated with it called $\eth$ and then we'll say that it's the exterior derivative. }
+
+Just say we know how to calculate the flux through a surface, we can create an operator that takes the flux through the volume, then we get Stokes theorem. Don't mix up that Stokes theorem (there are things we can up and down in dimensions) and that we have closed forms from which we can create a potential. These should be two seperate things. 
+
+As examples: we start with a force (a function of a line), and we can get work. From that we can create a functional that take a surface, take the boundary and it gives you the work to go around the boundary. And if the force is conservative, then you get zero. So the functional applied to the surface always will be zero. Saying that the force is conservative is equivalent to saying that this higher dimensional functional is the zero functional. So now we want a relationship that's local. Instead of having a condition on the integral, we want a condition on the differential at the point (local). The idea is that since we know for any functional there is a form, we want to understand what's the k-functional with the k-form
 
 There are two very important results drawn from this derivation. First, we now have an operator $\eth : \Omega_k \to \Omega_{k+1}$, just as we had $\eth : F_k \to F_{k+1}$. We define the former, then, as the \textbf{exterior derivative} on k-forms\footnote{In most texts on the subject (cf. Curtis and Miller, "Differential Manifolds and Theoretical Physics"), the exterior derivative is denoted simply with a $d$}. The second result is a generalization of something that may be familiar to the reader who's taken vector calculus: Stokes' Theorem. 
 
@@ -497,19 +514,21 @@ squarednode/.style={rectangle, draw=red!60, fill=red!5, very thick, minimum size
 
 
 \begin{defn}
-	\textbf{Stokes' Theorem}: For (k-1)-form $\omega$ and k-surface $\sigma$, $\int_{\partial \sigma}\omega = \int_{\sigma}\eth\omega$. 
+	\textbf{Stokes' Theorem}: For (k-1)-form $\omega$ and k-surface $\sigma$, $\int_{\partial \sigma}\omega = \int_{\sigma}\eth\omega$. \textbf{NOTE: We kinda already gave this definition in the exterior derivative deifnition. It's kinda funny. We can handle this two ways: define the exterior derivative as being an operation that does the thing, and have stoke's theorem be waht the exterior derivative does. }
 \end{defn}
 
 In many treatments of Electromagnetism (for example, "Classical Electromagnetic Radiation" by Heald and Marion), Stokes' Theorem is given in terms of the curl as $\int_S \nabla \times \vec{A} \cdot d\vec{S} = \oint_{\Gamma} \vec{A} \cdot d\vec{l}$ (\textbf{Figure out how to categorize these terms}). This allows us to take a brief digression to see how the tools we have defined look in the more familiar 3D cases. 
 
+\textbf{Give the definition of the exterior derivative in component form as in overleaf}
+
 Suppose we have $f \in \Omega_0$, $v \in \Omega_1$, and $B \in \Omega_2$, and we apply the exterior derivative to each of them. We have that $\eth f = \partial_a f e^a$, $\eth v = \partial_a v_b e^a \wedge e^b$, and $\eth B = \partial_a B_{bc} e^a\wedge e^b \wedge e^c$. 
 
-By looking closer at these expressions, we see familiar tools from vector calculus arise. $\partial_a f e^a$ is a 1-form consisting of the sum of derivatives in each of the basis directions. In the 3D case, we have that $\partial_a f e^a = \frac{\partial f}{\partial x^1} e^1 + \frac{\partial f}{\partial x^2} e^2 + \frac{\partial f}{\partial x^3} e^3$. This is simply the gradient of a scalar functional. So, we have that in $\mathbb{R}^3$, $\partial_a f e^a = \nabla f$. Similarly, we see that in 3D, $\eth v$ will give us a 2-form from a 1-form, composed of the sum of derivatives in the directions perpendicular to the original 1-form. That is, in $\mathbb{R}^3$, $\eth v = (\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^2\wedge e^3 - (\frac{\partial v_1}{\partial x^3} - \frac{\partial v_3}{\partial x^1})e^1 \wedge e^3 + (\frac{\partial v_1}{\partial x^2} - \frac{\partial v_2}{\partial x^1})e^1 \wedge e^2 = \nabla \times v$. Finally, $\eth B = (\frac{\partial B_1}{\partial x^1} + \frac{\partial B_2}{\partial x^2} + \frac{\partial B_3}{\partial x^3})e^1\wedge e^2 \wedge e^3 = \nabla \cdot B$. 
+By looking closer at these expressions, we see familiar tools from vector calculus arise. $\partial_a f e^a$ is a 1-form consisting of the sum of derivatives in each of the basis directions. In the 3D case, we have that $\partial_a f e^a = \frac{\partial f}{\partial x^1} e^1 + \frac{\partial f}{\partial x^2} e^2 + \frac{\partial f}{\partial x^3} e^3$. This is simply the gradient of a scalar functional. So, we have that in $\mathbb{R}^3$, $\partial_a f e^a = \nabla f$. Similarly, we see that in 3D, $\eth v$ will give us a 2-form from a 1-form, composed of the sum of derivatives in the directions perpendicular to the original 1-form. That is, in $\mathbb{R}^3$, $\eth v = (\frac{\partial v_2}{\partial x^3} - \frac{\partial v_3}{\partial x^2})e^2\wedge e^3 - (\frac{\partial v_1}{\partial x^3} - \frac{\partial v_3}{\partial x^1})e^1 \wedge e^3 + (\frac{\partial v_1}{\partial x^2} - \frac{\partial v_2}{\partial x^1})e^1 \wedge e^2 = \nabla \times v$ (NOTE: \textbf{Not quite true, the cross gives the line, not the wedge of the two others}). Finally, $\eth B = (\frac{\partial B_1}{\partial x^1} + \frac{\partial B_2}{\partial x^2} + \frac{\partial B_3}{\partial x^3})e^1\wedge e^2 \wedge e^3 = \nabla \cdot B$ (NOTE: same deal here, the divergence gives a scalar: ie the hodge dual of the wedged things). 
 
 With these new, more general geometric expressions for gradient, curl, and divergence, their physical interpretations become immediately clear, simply from the notation. If we extend the flux example, we see that the gradient of a 0-form is simply the lengthwise flow in possible dimension (three, in 3D), the curl of a 1-form is the planewise flow in each plane (still 3, in 3D), and the divergence of a 2-form is the flow outwards from a point per unit volume. 
 
 
-\textbf{NOTE: I'd like to express Maxwell's equations as best as possible using differential forms. Probably not possible without a metric, and just plugging the exterior derivative expressions into the regular equations in 3D clearly won't cut it}
+\textbf{NOTE: I'd like to express Maxwell's equations as best as possible using differential forms. Probably not possible without a metric, and just plugging the exterior derivative expressions into the regular equations in 3D clearly won't cut it. What we can do is talk about a lot of other things besides such as talk about closed and exact forms. It's easier to understand in integral form. maybe talk about the aharonov bohm effect}
 
 \section{Electricity and Magnetism}
 
